--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-cookie": "^7.2.0",
